# rpi_imageviewer

./: README.md  pyproject.toml
etc/: config.json  imvi.json
imvi/: button.py  imvi.py  media.py  statemachine.py  tools.py
service/: imvi-kiosk.service
src/: button.py  imvi.py
